<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical">

    <EditText
        android:id="@+id/edit_text_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:hint="@string/hint_grocery"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <LinearLayout
        android:id="@+id/linear_layout_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_text_item_name">

        <EditText
            android:id="@+id/edit_text_quantity"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/edit_text_units"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Cans"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_quantity"
        android:inputType="textMultiLine"
        android:hint="@string/hint_notes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_text_notes"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/grocery_item_add"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/grocery_item_cancel"/>

    </LinearLayout>



</RelativeLayout>